@@ -3,10 +3,22 @@ v1.99.3
 		- Added diffTable() method to return a table of differential results broken out by pairwise comparison. (more human-readable)
 		- Added sigMatrix() method to CuffSet objects to draw heatmap showing number of significant genes by pairwise comparison at a given FDR.
 		- A call to fpkm() now emits calculated stdev field as well.
+		- - Can now pass gtf file as argument to readCufflinks() to integrate transcript model information into database backend
+			* Added requirement for rtracklayer and GenomicFeatures packages.
+			* You must also indicate which genome build the .gtf was created against by using the 'genome' argument to readCufflinks.
+		- Integration with Gviz:
+			* CuffGene objects now have a makeGeneRegionTrack() argument to create a GeneRegionTrack() from transcript model information
+			* Can also make GRanges object
+			* ONLY WORKS IF YOU READ .gtf FILE IN WITH readCufflinks()
+			
 		
 	Bugfixes:
 		- Fixed diffData 'features' argument so that it now does what it's supposed to do.
 		- added DB() with signature(object="CuffSet") to NAMESPACE
+		
+	Notes:
+		- Once again, there have been modifications to the underlying database schema so you will have to re-run readCufflinks(rebuild=T) to re-analyze existing datasets.
+		
 		
 v1.99.2
 	Bugfixes:
